--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -29,8 +29,8 @@ brew:
     name: homebrew-tap
 
   description: "minus5 infrastructre entry point"
-  download_strategy: GitHubPrivateRepositoryReleaseDownloadStrategy
-  custom_require: ../download_strategy
+  download_strategy: :github_private_release
+  custom_require: github_private_download_strategy
 
   # Git author used to commit to the repository.
   commit_author:
