--- a/deploy/fixture/deployments/test/config.yml
+++ b/deploy/fixture/deployments/test/config.yml
@@ -16,6 +16,7 @@ datacenters:
                     envCamelCase: "envCamelCase_set"
                     ENV_UPPERCASE: "ENV_UPPERCASE_set"
                 arg: ["-argument", "argument_set", "-argument_var1", "argument_var1_set"]
+                vol: ["name-of-the-volume1:/path/in/container1","name-of-the-volume2:/path/in/container2"]
             service_test2:
                 image: service_test2_image
                 count: 2
